# paddock

./: .gitignore  AGENTS.md  LICENCE.txt  README.rst  pyproject.toml
.agents/skills/phx-filters/: SKILL.md
.agents/skills/release/: SKILL.md
docs/adr/: 0001-add-mypy-type-checker.md  INDEX.md
docs/future/: container-home-configuration.md  squid-proxy-sidecar.md  volume-container-path-validation.md
docs/superpowers/plans/: 2026-03-25-paddock-core.md  2026-03-25-paddock-core__review.md  filepath-filter.md
images/: Dockerfile
src/paddock/: __main__.py  cli.py
src/paddock/agents/: __init__.py  claude.py  shell.py
src/paddock/config/: filters.py  loader.py  schema.py
src/paddock/docker/: build.py  builder.py
tests/: conftest.py  test_cli.py  test_main.py
tests/config/: test_filters.py  test_loader.py  test_schema.py
tests/docker/: test_build.py  test_builder.py
