[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "autohooks>=26.2.0,<27.0.0",
    "autohooks-plugin-black>=23.10.0,<24.0.0",
    "autohooks-plugin-mypy>=23.10.0,<24.0.0",
    "autohooks-plugin-pytest>=23.10.0,<24.0.0",
    "autohooks-plugin-ruff>=25.3.1,<26.0.0",
    "mypy>=2.0.0,<3.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "types-pyyaml>=6.0.12.20260508,<7.0.0.0",
]

[project]
authors = [{ name = "Phoenix Zerin", email = "phx@phx.nz" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "phx-class-registry>=5.2.1,<6.0.0",
    "phx-filters>=3.6.0,<4.0.0",
]
description = "Launch coding agents in isolated Docker containers."
dynamic = ["version"]
keywords = [
    "agents",
    "coding",
    "docker",
    "isolation",
]
license = "MIT"
name = "phx-paddock"
readme = "README.rst"
requires-python = ">=3.12, <4"

[project.entry-points."paddock.agents"]
claude = "paddock.agents.claude:ClaudeAgent"
false = "paddock.agents.shell:ShellAgent"

[project.scripts]
paddock = "paddock.__main__:main"

[project.urls]
Repository = "https://github.com/phx/paddock"

[tool.autohooks]
mode = "pythonpath"
pre-commit = [
    "adr_index",
    "autohooks.plugins.black",
    "autohooks.plugins.mypy",
    "autohooks.plugins.pytest",
    "autohooks.plugins.ruff",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/paddock",
    "LICENCE.txt",
    "images",
]

[tool.hatch.build.targets.wheel]
include = ["src/paddock"]

[tool.hatch.build.targets.wheel.sources]
"src/paddock" = "paddock"

[tool.hatch.version]
path = "src/paddock/__init__.py"

[tool.mypy]
check_untyped_defs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["filters", "filters.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
keyring-provider = "subprocess"
# Fix SSL errors when running in Leash containers
system-certs = true
